@@ -1,3 +1,8 @@
+1999-11-30  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmTaskBar/Goodies.c:
+	added #ifdef SHAPE
+
 1999-11-29  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmWharf/FvwmWharf.c (My_XNextEvent):
